2004-03-29  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/dyna-draw-context.cpp, src/mod360.cpp, src/mod360.h,
	src/Makefile.am: Move mod360 to new files mod360.cpp, mod360.h.
	Add unit test for it.

2004-03-28  Bryce Harrington <bryce@bryceharrington.com>

	* inkscape.cpp, inkscape.h, xml/repr-io.cpp, xml/repr.h:  Adding
	  better error handling for the situation where the
	  preferences.xml file is not successfully loaded.  In this case,
	  we want to suppress saving it, lest we overwrite the file with
	  the default skeleton preferences.

2004-03-28  Jon Phillips <jon@users.sourceforge.net>

	* src/interface.cpp src/select-toolbar.cpp src/verbs.cpp src/verbs.h:
	  Changed rotate verb to be SP_VERB_OBJECT_ROTATE_90_CW so that I can
	  now install SP_VERB_OBJECT_ROTATE_90_CCW.

	* share/icons/icons.svg src/interface.cpp src/select-toolbar.cpp
	  src/selection-chemistry.cpp src/selection-chemistry.h
	  src/verbs.cpp src/verbs.h: Added rotation 90 degrees CCW to the menu,
	  icons, and the interface. It was a pretty simple thing to do but was
	  not available on the interface.

2004-03-28  MenTaLguY <mental@rydia.net>

	* src/sp-gradient.cpp: request SP_OBJECT_MODIFIED_FLAG if gradient stops
	  are added or removed

2004-03-27  bulia byak <bulia@users.sourceforge.net>

	* src/main.cpp: Removed redundancy in error messages, reworded some

	* src/verbs.cpp src/toolbox.cpp src/nodepath.cpp src/inkscape.cpp
	src/extension/internal/ps.cpp src/main.cpp: Typos, reported by Arpad Biro

	* AUTHORS: Added John Cliff, Fred (long overdue), Adib

	* src/widgets/gradient-vector.cpp: John Cliff: multistage gradient editor

	* src/splivarot.cpp src/style.cpp src/xml/repr-util.cpp src/sp-polygon.cpp:
	Adib's svgostringstream patches
 
	* src/toolbox.cpp: All default buttons work correctly with undo, use freezing to
	prevent double changes; tooltip edits, formatting; defocusing on all widgets

	* src/display/nr-arena-image.cpp: Tentative fix for 906376: image always uses